--- a/package.json
+++ b/package.json
@@ -35,10 +35,17 @@
     "format:client": "cd client && npm run format"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
+    "concurrently": "^8.2.2",
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
