feat: Implement user management controller with profile, account, and statistics endpoints
- Added UserController with methods for getting, updating, and deleting user profiles.
- Implemented user initialization and statistics retrieval.
- Integrated Joi for request validation in updateProfile method.
- Created Auth middleware for token authentication.
- Added error handling middleware for consistent API error responses.
- Introduced rate limiting middleware for general API and health check routes.
- Developed health check routes for server and Firebase connection status.
- Established project management service with CRUD operations and user project retrieval.
- Updated TypeScript configuration for improved type safety and compatibility.

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,49 +1,81 @@
 # Server Configuration
-NODE_ENV=development
 PORT=5000
-API_VERSION=v1
+NODE_ENV=development
 
-# Database
-DATABASE_URL="postgresql://postgres:password@localhost:5432/legacy_modernization_dev"
-
-# Redis
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
+# Firebase Configuration (Free Tier)
+FIREBASE_PROJECT_ID=your-firebase-project-id
+FIREBASE_CLIENT_EMAIL=your-firebase-client-email
+FIREBASE_PRIVATE_KEY=your-firebase-private-key
 
 # Security
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-this
-JWT_ACCESS_EXPIRY=15m
-JWT_REFRESH_EXPIRY=7d
-BCRYPT_ROUNDS=10
+CORS_ORIGIN=http://localhost:3000
 
-# CORS
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
-
-# AI/MCP Configuration
-CLAUDE_API_KEY=your-claude-api-key
-OPENAI_API_KEY=your-openai-api-key
-MCP_SERVER_URL=http://localhost:3001
-AI_MODEL=claude-3-5-sonnet-20241022
-AI_MAX_TOKENS=4000
-AI_TEMPERATURE=0.7
-
-# Rate Limiting
+# Rate Limiting (Conservative for free tier)
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-
-# File Upload
-MAX_FILE_SIZE=5242880
-UPLOAD_DIR=./uploads
-ALLOWED_FILE_TYPES=.js,.jsx,.ts,.tsx
+RATE_LIMIT_MAX_REQUESTS=50
 
 # Logging
-LOG_LEVEL=debug
-LOG_DIR=./logs
+LOG_LEVEL=info
+```
 
-# External Services
-SENTRY_DSN=
-SMTP_HOST=
-SMTP_PORT=587
-SMTP_USER=
-SMTP_PASS=
+**`.gitignore`**
+```
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs/
+*.log
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Firebase service account keys (security)
+*service-account*.json
+firebase-adminsdk*.json
+
+# Temporary files
+tmp/
+temp/
