--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,13 @@
     "clsx": "^2.1.1",
     "firebase": "^12.4.0",
     "lucide-react": "^0.544.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^7.9.3",
+    "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
@@ -32,8 +33,10 @@
     "@eslint/js": "^9.36.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^22.18.12",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.3",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
