feat: Implement GitHub OAuth integration
- Added GitHub OAuth configuration to the server environment variables.
- Created GitHub service for handling authentication and API requests.
- Implemented GitHub controller with endpoints for OAuth flow, fetching repositories, and file content.
- Added GitHub routes for handling API requests related to GitHub integration.
- Created GitHub callback component in the client for handling OAuth responses.
- Updated conversion types to include optional content and path for uploaded files.
- Added a new HTML page for GitHub callback handling.
- Updated package dependencies for axios and types.

--- a/server/.env.example
+++ b/server/.env.example
@@ -13,7 +13,10 @@ CORS_ORIGIN=http://localhost:3000
 # Rate Limiting (Conservative for free tier)
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=50
-
+# GitHub OAuth Configuration
+GITHUB_CLIENT_ID=Ov23liWVXbOZpSBn64Bn
+GITHUB_CLIENT_SECRET=9c9d296ae041662a1e9ba4ae5855e40b6afae833
+GITHUB_CALLBACK_URL=http://localhost:5173/github-callback
 # Logging
 LOG_LEVEL=info
 ```
