--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,7 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.16.2",
-    "axios": "^1.12.2",
+    "axios": "^1.13.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
@@ -49,6 +49,7 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
@@ -58,7 +59,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.6.0",
+    "@types/node": "^24.9.1",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
