--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.90.10",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "firebase": "^12.4.0",
+    "idb": "^7.1.1",
     "lucide-react": "^0.544.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -36,6 +39,7 @@
     "@eslint/js": "^9.36.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.18.12",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
