--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,4 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "dist/index.js",
-      "use": "@vercel/node"
-    }
-  ]
+  "outputDirectory": "dist"
 }
