feat: Update environment configuration for Docker and local development; add backend API integration for analysis and transformation

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,5 +1,8 @@
-# API URL for Development
+# API URL for Development (Node.js backend)
 VITE_API_URL=http://localhost:3001
+
+# Backend API URL (Python/FastAPI for analysis & conversion)
+VITE_BACKEND_API_URL=http://127.0.0.1:8000
 
 # MCP Service Configuration
 VITE_MCP_API_URL=http://localhost:3001
