--- a/client/.env.example
+++ b/client/.env.example
@@ -1,4 +1,10 @@
-VITE_API_URL=http://localhost:5000/api/v1
+VITE_API_URL=http://localhost:3001
+VITE_BACKEND_API_URL=http://127.0.0.1:8000
+VITE_APP_ENV=development
 VITE_APP_NAME=Legacy Modernization Platform
 VITE_MAX_FILE_SIZE=5242880
 VITE_SUPPORT_EMAIL=support@legacymodernization.com
+
+# Optional: MCP Service Configuration
+VITE_MCP_API_URL=http://localhost:3001
+VITE_MCP_API_KEY=dev-key
