feat: integrate AWS S3 for project file storage and download
- Added AWS S3 configuration to .env.example
- Updated package.json to include AWS SDK dependencies
- Created s3.ts for S3 client configuration
- Implemented downloadProject method in project.controller.ts to generate presigned URLs for file downloads
- Added route for downloading projects from S3 in project.routes.ts
- Developed s3.service.ts to handle S3 interactions including file existence checks and metadata retrieval

--- a/server/.env.example
+++ b/server/.env.example
@@ -17,6 +17,13 @@ RATE_LIMIT_MAX_REQUESTS=50
 GITHUB_CLIENT_ID=Ov23liWVXbOZpSBn64Bn
 GITHUB_CLIENT_SECRET=9c9d296ae041662a1e9ba4ae5855e40b6afae833
 GITHUB_CALLBACK_URL=http://localhost:5173/github-callback
+
+# AWS S3 Configuration
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+AWS_S3_BUCKET_NAME=lg-s3-store
+
 # Logging
 LOG_LEVEL=info
 ```
