--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.943.0",
+    "@aws-sdk/s3-request-presigner": "^3.943.0",
     "@prisma/client": "^6.16.2",
     "axios": "^1.13.0",
     "bcryptjs": "^3.0.2",
