--- a/server/vercel.json
+++ b/server/vercel.json
@@ -22,7 +22,7 @@
         },
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "*"
+          "value": "https://vigilant-disco-client.vercel.app"
         },
         {
           "key": "Access-Control-Allow-Methods",
