--- a/server/package.json
+++ b/server/package.json
@@ -49,6 +49,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^6.10.1",
     "redis": "^5.8.2",
+    "serverless-http": "^3.2.0",
     "winston": "^3.18.1",
     "zod": "^4.1.11"
   },
