--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,14 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "api/index.ts",
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/api/index.ts"
+      "src": "/(.*)",
+      "dest": "/api/index.ts"
     }
   ]
 }
